# SWFRecomp-CC

./: .gitignore  .gitmodules  CC-note-root.md  IMPLEMENTATION_SUMMARY.md  branch-merge-history.md  create-md-files-json.py  create-prompts-text.py  md-files.json  opcode-index-plain.md  opcode-index-planning.md  opcode-index.json  opcode-index.md  prompt-all-docs.py  prompt.py  prompts-fail.txt  prompts-incomplete.txt  prompts.txt  repository-data.json
.github/workflows/: test.yml
SWFModernRuntime/: CMakeLists.txt
SWFModernRuntime/include/: utils.h
SWFModernRuntime/src/: utils.c
SWFRecomp/include/: context.hpp  swf.hpp  tag.hpp
SWFRecomp/scripts/: build_test.sh
SWFRecomp/src/: swf.cpp
SWFRecomp/tests/: .gitignore  all_tests.sh  simple_object_test.py  test_results.json  test_utils.py  test_vecs.txt
SWFRecomp/tests-wip/call_method_swf_5/: CMakeLists.txt  IMPLEMENTATION_NOTE.md  README.md  config.toml  create_test_swf.py  main.c  test_info.json  validate.py
SWFRecomp/wasm_wrappers/: main.c
SWFRecompDocs/: complete-implementation-guide.md  failing-test-fix-guide.md  opcode-categorization.md  parallel-opcode-experiments.md  parallel-opcode-implementation-guide.md
SWFRecompDocs/merge/: README.md  upstream-downstream-merge-plan-2024-12.md
SWFRecompDocs/planning/: README.md  app-context-migration-plan.md
SWFRecompDocs/plans/: audio-support-plan.md  test-system-redesign-plan.md
SWFRecompDocs/prompts/: README.md  opcode-add2-0x47.md  opcode-bit-and-0x60.md  (+28 more)
scripts/: build_opcode_index.py  generate_opcode_markdown.py  test-and-document.py
(+551 files in other folders)
